# kulprit

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: dependencies.yml  publish-to-test-pypi.yml  test.yml
docs/: Makefile  OVERVIEW.md  api_docs.md  api_reference.rst  conf.py  index.md  index.rst  make.bat
docs/assets/: extra.js
docs/examples/: Examples.ipynb  Overview.ipynb  References.ipynb  bikes.csv  quick-start.ipynb  references.bib
docs/examples/tutorials/: intro.ipynb
docs/html/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: api_reference.doctree  environment.pickle  index.doctree
docs/html/.doctrees/examples/: quick-start.doctree
docs/html/.doctrees/examples/tutorials/: intro.doctree
docs/html/.doctrees/jupyter_execute/examples/: quick-start.doctree
docs/html/.doctrees/jupyter_execute/examples/tutorials/: intro.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/examples/: quick-start.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/examples/tutorials/: intro.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/jupyter_execute/examples/tutorials/: intro.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/tutorials/: intro.doctree
docs/html/.doctrees/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.doctree
docs/html/_modules/: index.html
docs/html/_modules/kulprit/: reference.html
docs/html/_modules/kulprit/plots/: plots.html
docs/html/_sources/examples/: quick-start.ipynb.txt
docs/html/examples/: quick-start.html
docs/html/examples/tutorials/: intro.html
docs/html/jupyter_execute/examples/: quick-start.html
docs/html/jupyter_execute/examples/tutorials/: intro.html
docs/html/jupyter_execute/jupyter_execute/examples/: quick-start.html
docs/html/jupyter_execute/jupyter_execute/examples/tutorials/: intro.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/examples/tutorials/: intro.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/tutorials/: intro.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/tutorials/: intro.html
docs/html/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/examples/: quick-start.html
docs/notebooks/: poisson.ipynb  quick-start.ipynb
docs/notebooks/tutorials/: intro.ipynb  intro.md
docs/source/: kulprit.plotting.rst  kulprit.projection.rst  kulprit.rst  kulprit.search.rst  modules.rst
kulprit/: __init__.py  projector.py  reference.py  utils.py
kulprit/data/: submodel.py
kulprit/plots/: __init__.py  plots.py
kulprit/projection/: arviz_io.py  divergences.py  likelihood.py  project.py  projector.py  pymc_io.py  search_strategies.py  solver.py  submodel.py
kulprit/search/: forward.py  l1.py  searcher.py
notebooks/: 01-ym-linear-regression-projection-grad-descent.ipynb  01-ym-linear-regression-projection.ipynb  01-ym-prototype-workflow.ipynb  Untitled.ipynb  play.ipynb  test.ipynb
src/kulprit/: __init__.py  base.py  data.py  datasets.py  families.py  formatting.py  reference.py  utils.py
src/kulprit/data/: __init__.py  building.py  data.py  ref_data.py  res_idata.py  structure.py  submodel.py  utils.py
src/kulprit/families/: __init__.py  continuous.py  discrete.py  family.py  link.py
src/kulprit/plots/: __init__.py  plots.py
src/kulprit/projection/: __init__.py  architecture.py  dispersion.py  divergences.py  likelihood.py  loss.py  losses.py  optimise.py  posterior_pred.py  pps.py  project.py  projector.py  solver.py  submodel.py
src/kulprit/projection/losses/: __init__.py  kld.py
src/kulprit/projection/solvers/: __init__.py  analytic.py  gradient.py  solver.py
src/kulprit/search/: __init__.py  forward.py  l1.py  path.py  searcher.py
tests/: __init__.py  conftest.py  test_dispersion.py  test_families.py  test_family.py  test_kl_div.py  test_likelihood.py  test_loss.py  test_model_data.py  test_plots.py  test_project.py  test_projector.py  test_pymc_io.py  test_search.py  test_solver.py
tests/data/: binomial.json  regression.json
(+19 files in other folders)
