[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kulprit"
readme = "README.md"
maintainers = [
    { name = "Osvaldo Martin", email = "aloctavodia@gmail.com" },
    { name = "Tomás Capretto", email = "tomicapretto@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
description = "Kullback-Leibler projections for Bayesian model selection."
dependencies = [
    "arviz_plots @ git+https://github.com/arviz-devs/arviz-plots",
    "bambi >=0.16",
    "scikit-learn>=1.0.2"
    ]


[tool.flit.module]
name = "kulprit"

[project.urls]
source = "https://github.com/bambinos/kulprit"
tracker = "https://github.com/bambinos/kulprit/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 100

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]